--- a/about.html
+++ b/about.html
@@ -98,44 +98,45 @@
                 <div class="column">
                   <h4>Who.</h4>
                   <p>
-                    Lorem ipsum Nisi amet fugiat eiusmod et aliqua ad qui ut
-                    nisi Ut aute anim mollit fugiat qui sit ex occaecat et eu
-                    mollit nisi pariatur fugiat deserunt dolor veniam
-                    reprehenderit aliquip magna nisi consequat aliqua veniam in
-                    aute ullamco Duis laborum ad non pariatur sit.
+                    We are Nadav and Noam, the creative duo behind Yummi's
+                    Bakery. As best friends and co-owners, we share a deep
+                    passion for the culinary arts. We are the cooks in the
+                    kitchen, personally crafting every item on our menu to
+                    ensure that our friendship and love for food go into
+                    everything we serve.
                   </p>
                 </div>
 
                 <div class="column">
                   <h4>When.</h4>
                   <p>
-                    Lorem ipsum Nisi amet fugiat eiusmod et aliqua ad qui ut
-                    nisi Ut aute anim mollit fugiat qui sit ex occaecat et eu
-                    mollit nisi pariatur fugiat deserunt dolor veniam
-                    reprehenderit aliquip magna nisi consequat aliqua veniam in
-                    aute ullamco Duis laborum ad non pariatur sit.
+                    Our journey began in 2019, shortly after we first met. We
+                    quickly discovered that we shared the exact same dream: to
+                    create a place where people could enjoy real food. That
+                    shared passion turned into reality, and we have been serving
+                    our community ever since.
                   </p>
                 </div>
 
                 <div class="column">
                   <h4>What.</h4>
                   <p>
-                    Lorem ipsum Nisi amet fugiat eiusmod et aliqua ad qui ut
-                    nisi Ut aute anim mollit fugiat qui sit ex occaecat et eu
-                    mollit nisi pariatur fugiat deserunt dolor veniam
-                    reprehenderit aliquip magna nisi consequat aliqua veniam in
-                    aute ullamco Duis laborum ad non pariatur sit.
+                    Our soul is dedicated to bringing people together through
+                    the power of comfort food. At Yummi's, we don't just stick
+                    to one style; we pride ourselves on offering the best food
+                    variety in town. From savory breads to sweet pastries, we
+                    have something to satisfy every craving.
                   </p>
                 </div>
 
                 <div class="column">
                   <h4>How.</h4>
                   <p>
-                    Lorem ipsum Nisi amet fugiat eiusmod et aliqua ad qui ut
-                    nisi Ut aute anim mollit fugiat qui sit ex occaecat et eu
-                    mollit nisi pariatur fugiat deserunt dolor veniam
-                    reprehenderit aliquip magna nisi consequat aliqua veniam in
-                    aute ullamco Duis laborum ad non pariatur sit.
+                    Our secret to quality is simple: everything is handmade with
+                    genuine love and passion for the craft. We don't cut
+                    corners. We are up before the sun, baking fresh every single
+                    morning to ensure that perfection is baked into every crust,
+                    crumb, and slice before you walk in the door.
                   </p>
                 </div>
               </div>
