--- a/navbar.html
+++ b/navbar.html
@@ -9,14 +9,12 @@
     <h2 class="s-header__nav-heading h6">Site Navigation</h2>
 
     <ul class="s-header__nav">
-      <li><a href="category.html" title="">Categories</a></li>
-      <li><a href="single-standard.html" title="">Blog</a></li>
-      <li><a href="styles.html" title="">Styles</a></li>
-      <li><a href="about.html" title="">About</a></li>
+      <li><a href="gallery.html" title="">Gallery</a></li>
+      <li><a href="about.html" title="">Blog</a></li>
+      <li><a href="feedback.html" title="">Feedback</a></li>
       <li><a href="contact.html" title="">Contact</a></li>
     </ul>
     <!-- end header__nav -->
-
     <a
       href="#0"
       title="Close Menu"
