--- a/about.html
+++ b/about.html
@@ -63,34 +63,55 @@
             <div class="s-content__primary">
               <h1 class="s-content__title">Learn More About Us.</h1>
 
-              <p class="lead">
-                Lorem ipsum Nisi cillum reprehenderit minim sunt dolore dolor
-                eiusmod eu aliquip ad ut sint dolore laborum voluptate ullamco
-                dolore aliquip enim. Excepteur cillum cupidatat fugiat nostrud
-                cupidatat dolor sunt sint sit nisi est eu exercitation
-                incididunt adipisicing
-              </p>
+              <div class="s-content__author">
+                <img src="images/avatars/person.jpg" alt="" />
 
-              <p>
-                Duis ex ad cupidatat tempor Excepteur cillum cupidatat fugiat
-                nostrud cupidatat dolor sunt sint sit nisi est eu exercitation
-                incididunt adipisicing veniam velit id fugiat enim mollit amet
-                anim veniam dolor dolor irure velit commodo cillum sit nulla
-                ullamco magna amet magna cupidatat qui labore cillum sit in
-                tempor veniam consequat non laborum adipisicing aliqua ea nisi
-                sint ut quis proident ullamco ut dolore culpa occaecat ut
-                laboris in sit minim cupidatat ut dolor voluptate enim veniam
-                consequat occaecat fugiat in adipisicing in amet Ut nulla nisi
-                non ut enim aliqua laborum mollit quis nostrud sed sed.
-              </p>
+                <div class="about">
+                  <h5>Nadav Meir</h5>
 
-              <p>
-                Lorem ipsum Cillum sit sunt dolore non aute enim pariatur
-                deserunt magna reprehenderit veniam officia ullamco eiusmod
-                laborum commodo veniam elit proident enim sit cillum ex aliquip
-                dolore labore sint ut deserunt officia veniam consectetur in in
-                quis eu consectetur non sint Duis mollit Ut magna irure.
-              </p>
+                  <p>
+                    Nadav is the savory specialist and the heart behind our
+                    ovens. As the "Bread Master," he oversees the creation of
+                    our rustic loaves and savory dishes. Inspired by his
+                    mother’s traditional cooking and refined through years of
+                    self-study, Nadav brings a comforting, home-style touch to
+                    professional baking. His true passion lies in the science of
+                    dough, ensuring every loaf has the perfect crust and crumb.
+                  </p>
+
+                  <ul class="author-social">
+                    <li><a href="#0">Facebook</a></li>
+                    <li><a href="#0">Twitter</a></li>
+                    <li><a href="#0">Dribbble</a></li>
+                    <li><a href="#0">Instagram</a></li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="s-content__author">
+                <img src="images/avatars/person2.jpg" alt="" />
+
+                <div class="about">
+                  <h5>Noam Lavi</h5>
+
+                  <p>
+                    Noam brings the sweetness to Yummi’s Bakery. As our lead
+                    "Pastry Artist," his focus is entirely on the delicate cakes
+                    and decadent desserts that line our shelves. A self-taught
+                    perfectionist, Noam built his impressive skills through
+                    sheer determination and endless practice in the kitchen. He
+                    pours his creativity into crafting beautiful sweets that
+                    taste just as amazing as they look.
+                  </p>
+
+                  <ul class="author-social">
+                    <li><a href="#0">Facebook</a></li>
+                    <li><a href="#0">Twitter</a></li>
+                    <li><a href="#0">Dribbble</a></li>
+                    <li><a href="#0">Instagram</a></li>
+                  </ul>
+                </div>
+              </div>
 
               <hr />
 
