--- a/footer.html
+++ b/footer.html
@@ -4,10 +4,9 @@
       <h5>About Our Site</h5>
 
       <p>
-        Lorem ipsum Ut velit dolor Ut labore id fugiat in ut fugiat nostrud qui
-        in dolore commodo eu magna Duis cillum dolor officia esse mollit
-        proident Excepteur exercitation nulla. Lorem ipsum In reprehenderit
-        commodo aliqua irure labore.
+        This site was built in 2025 by Noam Lavi and Nadav Meir - the co
+        founders of Yummi's bakery. <br />
+        All the rights reserved to Noam Lavi and Nadav Meir.
       </p>
     </div>
     <!-- end s-footer__info -->
