--- a/gallery.html
+++ b/gallery.html
@@ -237,7 +237,7 @@
                   <span class="entry__cat-links"> Italian food </span>
                 </div>
 
-                <h1 class="entry__title">Vegetable Pizza .</h1>
+                <h1 class="entry__title">Vegetable Pizza.</h1>
               </div>
               <div class="entry__excerpt">
                 <p>
@@ -351,6 +351,162 @@
                   shredded coconut. The contrast between the smooth cocoa and
                   the tropical coconut texture makes for an irresistible,
                   melt-in-your-mouth indulgence.
+                </p>
+                <button class="expand-btn">Read more…</button>
+              </div>
+            </div>
+            <!-- end entry__text -->
+          </article>
+
+          <article class="brick entry format-standard animate-this">
+            <div class="entry__thumb">
+              <img
+                src="images/thumbs/gallery/bagettjpg-600.jpg"
+                srcset="
+                  images/thumbs/gallery/bagettjpg-600.jpg  1x,
+                  images/thumbs/gallery/bagettjpg-1200.jpg 2x
+                "
+                alt=""
+              />
+            </div>
+            <!-- end entry__thumb -->
+
+            <div class="entry__text">
+              <div class="entry__header">
+                <div class="entry__meta">
+                  <span class="entry__cat-links"> bruschetta Photography </span>
+                </div>
+
+                <h1 class="entry__title">Minty tomato bruschetta.</h1>
+              </div>
+              <div class="entry__excerpt">
+                <p>
+                  Enjoy a classic Italian favorite. We top our toasted
+                  house-made rustic bread with a vibrant mix of diced
+                  vine-ripened tomatoes, fresh basil, and minced garlic.
+                  Finished with a drizzle of premium olive oil, it is the
+                  perfect crisp and savory appetizer. Nadav is the savory
+                  specialist and the heart behind our ovens. As the "Bread
+                  Master," he oversees the creation of our rustic loaves and
+                  savory dishes. Inspired by his mother’s traditional cooking
+                  and refined through years of self-study, Nadav brings a
+                  comforting, home-style touch to professional baking. His true
+                  passion lies in the science of dough, ensuring every loaf has
+                  the perfect crust and crumb. Noam brings the sweetness to
+                  Yummi’s Bakery. As our lead "Pastry Artist," his focus is
+                  entirely on the delicate cakes and decadent desserts that line
+                  our shelves. A self-taught perfectionist, Noam built his
+                  impressive skills through sheer determination and endless
+                  practice in the kitchen. He pours his creativity into crafting
+                  beautiful sweets that taste just as amazing as they look.
+                </p>
+                <button class="expand-btn">Read more…</button>
+              </div>
+            </div>
+            <!-- end entry__text -->
+          </article>
+
+          <article class="brick entry format-standard animate-this">
+            <div class="entry__thumb">
+              <img
+                src="images/thumbs/gallery/choux-600.jpg"
+                srcset="
+                  images/thumbs/gallery/choux-600.jpg  1x,
+                  images/thumbs/gallery/choux-1200.jpg 2x
+                "
+                alt=""
+              />
+            </div>
+            <!-- end entry__thumb -->
+
+            <div class="entry__text">
+              <div class="entry__header">
+                <div class="entry__meta">
+                  <span class="entry__cat-links"> Cookies Photography </span>
+                </div>
+
+                <h1 class="entry__title">Pâte à choux.</h1>
+              </div>
+              <div class="entry__excerpt">
+                <p>
+                  Our classic choux pastry is the foundation for our finest
+                  treats. This light, airy dough relies on steam to rise,
+                  creating a crisp, golden shell with a hollow center—the
+                  perfect vessel for our luscious creams and rich custards.
+                </p>
+                <button class="expand-btn">Read more…</button>
+              </div>
+            </div>
+            <!-- end entry__text -->
+          </article>
+
+          <article class="brick entry format-standard animate-this">
+            <div class="entry__thumb">
+              <img
+                src="images/thumbs/gallery/tortilla-600.jpg"
+                srcset="
+                  images/thumbs/gallery/tortilla-600.jpg  1x,
+                  images/thumbs/gallery/tortilla-1200.jpg 2x
+                "
+                alt=""
+              />
+            </div>
+            <!-- end entry__thumb -->
+
+            <div class="entry__text">
+              <div class="entry__header">
+                <div class="entry__meta">
+                  <span class="entry__cat-links"> breakfest Photography </span>
+                </div>
+
+                <h1 class="entry__title">
+                  Red lentil avocado tortilla breakfest.
+                </h1>
+              </div>
+              <div class="entry__excerpt">
+                <p>
+                  Start your day with a nutritious boost. Our house-made red
+                  lentil tortillas are soft, protein-rich, and naturally
+                  gluten-free. Topped with fresh, creamy avocado and a touch of
+                  zesty seasoning, this breakfast offers a wholesome, vibrant
+                  flavor combination you will love.
+                </p>
+                <button class="expand-btn">Read more…</button>
+              </div>
+            </div>
+            <!-- end entry__text -->
+          </article>
+
+          <article class="brick entry format-standard animate-this">
+            <div class="entry__thumb">
+              <img
+                src="images/thumbs/gallery/pancakes-600.png"
+                srcset="
+                  images/thumbs/gallery/pancakes-600.png  1x,
+                  images/thumbs/gallery/pancakes-1200.png 2x
+                "
+                alt=""
+              />
+            </div>
+            <!-- end entry__thumb -->
+
+            <div class="entry__text">
+              <div class="entry__header">
+                <div class="entry__meta">
+                  <span class="entry__cat-links">
+                    Sweets Breakfest Photography
+                  </span>
+                </div>
+
+                <h1 class="entry__title">Blueberry Pancakes Breakfest.</h1>
+              </div>
+              <div class="entry__excerpt">
+                <p>
+                  Start your morning with our fluffy, golden pancakes. Made from
+                  scratch, our batter is loaded with plump, juicy blueberries
+                  that burst with natural sweetness. Served warm and stacked
+                  high with maple syrup, these are the ultimate comforting
+                  breakfast treat.
                 </p>
                 <button class="expand-btn">Read more…</button>
               </div>
