--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           </div>
           <!-- end entry, featured grid -->
 
-          <article class="brick entry format-standard animate-this">
+          <article class="title brick entry format-standard animate-this">
             <div class="about-text-section animate-this">
               <h1 class="about-title">Yummi’s Bakery</h1>
               <p class="about-paragraph">
