--- a/contact.html
+++ b/contact.html
@@ -49,11 +49,11 @@
           <section>
             <div class="s-content__media">
               <img
-                src="images/thumbs/contact/contact-1050.jpg"
+                src="images/thumbs/contact/contact-1050.png"
                 srcset="
-                  images/thumbs/contact/contact-2100.jpg 2100w,
-                  images/thumbs/contact/contact-1050.jpg 1050w,
-                  images/thumbs/contact/contact-525.jpg   525w
+                  images/thumbs/contact/contact-2100.png 2100w,
+                  images/thumbs/contact/contact-1050.png 1050w,
+                  images/thumbs/contact/contact-525.png   525w
                 "
                 sizes="(max-width: 2100px) 100vw, 2100px"
                 alt=""
@@ -65,44 +65,47 @@
               <h1 class="s-content__title">Get In Touch With Us.</h1>
 
               <p class="lead">
-                Lorem ipsum Deserunt est dolore Ut Excepteur nulla occaecat
-                magna occaecat Excepteur nisi esse veniam dolor consectetur
-                minim qui nisi esse deserunt commodo ea enim ullamco non
-                voluptate consectetur minim aliquip Ut incididunt amet ut
-                cupidatat.
+                We’d love to hear from you! Whether you have a question about
+                our daily sourdough specials, want to place a custom order for a
+                birthday cake, or simply want to share your feedback, our doors
+                (and inboxes) are always open. Reach out to us today—Nadav and
+                Noam are here to make your day a little sweeter.
               </p>
 
               <p>
-                Duis ex ad cupidatat tempor Excepteur cillum cupidatat fugiat
-                nostrud cupidatat dolor sunt sint sit nisi est eu exercitation
-                incididunt adipisicing veniam velit id fugiat enim mollit amet
-                anim veniam dolor dolor irure velit commodo cillum sit nulla
-                ullamco magna amet magna cupidatat qui labore cillum sit in
-                tempor veniam consequat non laborum adipisicing aliqua ea nisi
-                sint ut quis proident ullamco ut dolore culpa occaecat ut
-                laboris in sit minim cupidatat ut dolor voluptate enim veniam
-                consequat occaecat fugiat in adipisicing in amet Ut nulla nisi
-                non ut enim aliqua laborum mollit quis nostrud sed sed.
+                Prefer to chat in person? Follow the aroma of fresh baking to
+                our storefront! We love meeting our neighbors, so feel free to
+                drop by, grab a warm pastry, and say hello. Whether online or in
+                the shop, we can’t wait to welcome you into the Yummi’s family.
               </p>
 
               <hr />
 
-              <div class="row block-large-1-2 block-tab-full s-content__blocks">
+              <div class="row block-large-1-3 block-tab-full s-content__blocks">
                 <div class="column">
                   <h4>Where to Find Us</h4>
                   <p>
-                    1600 Amphitheatre Parkway<br />
-                    Mountain View, CA<br />
-                    94043 US
+                    Kikar HaAtsmaut 8 <br />
+                    Netanya, IL<br />
                   </p>
                 </div>
-
                 <div class="column">
                   <h4>Contact Info</h4>
                   <p>
-                    someone@abstractwebsite.com<br />
-                    info@abstractwebsite.com <br />
-                    Phone: (+63) 555 1212
+                    yummiYummi@gmail.com<br />
+                    Phone: (+972) 53-373-3900
+                  </p>
+                </div>
+                <div class="column">
+                  <h4>Opening hours</h4>
+                  <p>
+                    Sunday 7:00–20:00 <br />
+                    Monday 7:00–20:00 <br />
+                    Tuesday 7:00–20:00 <br />
+                    Wednesday 7:00–20:00<br />
+                    Thursday 7:00–20:00 <br />
+                    Friday Closed <br />
+                    Saturday 19:00–22:00 <br />
                   </p>
                 </div>
               </div>
